# sk8brd

./: Cargo.toml  README.md
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml  README.md
client/src/: main.rs
proto/: Cargo.toml  README.md
proto/src/: lib.rs  ssh.rs
src/: lib.rs  main.rs
