[package]
name = "sk8brd"
version = "0.1.0"
edition = "2021"
authors = ["Konrad Dybcio <konradybcio@kernel.org>"]
license = "BSD-3-Clause"
description = "Simple remote devboard control software"
readme = "README.md"
repository = "https://github.com/linux-msm/sk8brd"
categories = ["command-line-utilities"]
default-run = "sk8brd"

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "sk8brd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.31", features = ["derive"] }
colored = "3.0.0"
crossterm = "0.28.1"
sk8brd-proto = { path = "../proto", features = ["ssh"] }
os_pipe = "1.2.1"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
russh = "0.50.4"
