[package]
name = "sk8brd-proto"
version = "0.1.0"
edition = "2024"
authors = ["Konrad Dybcio <konradybcio@kernel.org>"]
license = "BSD-3-Clause"
description = "Simple remote devboard control software"
readme = "README.md"
repository = "https://github.com/linux-msm/sk8brd"
categories = ["command-line-utilities"]

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "sk8brd"
path = "src/lib.rs"

[features]
ssh = []

[dependencies]
anyhow = "1.0"
async-trait = "0.1.87"
asynchronous-codec = "0.7.0"
clap = { version = "4.5.31", features = ["derive"] }
colored = "3.0.0"
crossterm = "0.28.1"
os_pipe = "1.2.1"
russh = "0.50.4"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
use = "0.0.1-pre.0"
